# back/src/bdd/Profile/routes/profileRouter.js
@@ -1,7 +1,13 @@
 var express = require('express');
 var login = require('../components/login');
 var register = require('../components/register');
+var getProfiles = require('../components/getProfiles');
 var router = express.Router();
+
+/* GET profiles list from an account. */
+router.get('/', async function (req, res, next) {
+  res.send(await getProfiles.getProfiles(req.body));
+});
 
 /* POST auth callback. */
 router.post('/login', async function (req, res, next) {
